--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,8 @@
     --main-bg-color: #edf5fe;
     --light-blue: #03a9f4;
     --dark-blue: #028bca;
+    --border-color: #0288d147;
+    --container-width: 500px;
   }
 
   body {
@@ -21,6 +23,168 @@
     left: 10px;
     width: 150px;
   }
+
+  body,
+  .upload-container,
+  .drop-zone {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .upload-container,
+  .drop-zone {
+    flex-direction: column;
+  }
+  
+  .upload-container {
+    background: #ffffff;
+    border-radius: 25px;
+    box-shadow: 0px 20px 20px 0px #00000017;
+  }
+  
+  .drop-zone {
+    width: var(--container-width);
+    min-height: 200px;
+    border: 2px dashed var(--border-color);
+    border-radius: 10px;
+    margin: 30px;
+    transition: 0.2s all ease-in;
+  }
+  .drop-zone.dragged {
+    background: var(--main-bg-color);
+    border-color: #0288d1;
+  }
+  
+  .drop-zone input {
+    display: none;
+  }
+  
+  .icon-container {
+    position: relative;
+    width: 175px;
+    height: 150px;
+  }
+  
+  .icon-container img {
+    width: 175px;
+   
+  }
+  
+  .icon-container .center {
+    z-index: 10;
+  }  
+
+  #browseBtn {
+    color: #2196f3;
+    cursor: pointer;
+  }
+
+  #uploadButton{
+    display: inline-block;
+    font-size: 18px;
+    padding: 8px 40px;
+    margin-top: 15px;
+    background: var(--light-blue);
+    text-decoration: none;
+    border: none;
+    border-radius: 5px;
+    color: #fff;
+    cursor: pointer;
+    transition: all .3s ease-in-out;
+  }
+
+/******************************/
+
+.email-container form {
+  border: 2px solid var(--border-color);
+  width: 100%;
+  padding: 15px;
+  box-sizing: border-box;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.email-container,
+.send-btn-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.email-container label {
+  margin: 5px;
+  font-size: 18px;
+}
+
+.email-container input {
+  border: none;
+  border-bottom: 2px solid var(--border-color);
+  height: 19px;
+  font-size: 18px;
+  text-align: center;
+}
+
+.email-container input:focus {
+  outline: none;
+}
+
+.email-container .filed {
+  margin-bottom: 5px;
+  display: flex;
+  justify-content: space-between;
+  width: 400px;
+}
+
+.send-btn-container button {
+  display: inline-block;
+    font-size: 18px;
+    padding: 8px 40px;
+    margin-top: 15px;
+    background: var(--light-blue);
+    text-decoration: none;
+    border: none;
+    border-radius: 5px;
+    color: #fff;
+    cursor: pointer;
+    transition: all .3s ease-in-out;
+}
+
+
+/*************************************/
+
+
+/**************************************/
+
+.sharing-container .input-container {
+  display: flex;
+  position: relative;
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.sharing-container .input-container input {
+  width: 100%;
+  border-radius: 3px;
+  padding: 10px 15px;
+  font-size: 20px;
+  border: 2px dashed var(--border-color);
+  border-radius: 6px;
+  background: #f5fcff;
+  color: #607d8b;
+}
+
+.sharing-container img {
+  height: 22px;
+  width: 30px;
+  position: absolute;
+  right: 7px;
+  top: 12px;
+  cursor: pointer;
+  background: #f5fcff;
+}
+
+
+/************************************/
 section.download {
     background: #fff;
     width: 430px;
